--- a/BlazorSnake/wwwroot/css/app.css
+++ b/BlazorSnake/wwwroot/css/app.css
@@ -5,7 +5,7 @@ html, body {
     background: url('../images/dessert-background.jpg');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto;
 
     overflow:hidden;
 }
@@ -59,10 +59,16 @@ a, .btn-link {
 #gameContainer {
     width:100%;
     text-align:center;
+    margin-top:20px;
 }
 
 #canvasContainer {
     width: 100%;
     height: 100%;
     margin: auto;
+}
+
+#gameInstructions {
+    text-align: center;
+    color: brown;
 }
