Fixed small bug and added reference to the source code on the main page

--- a/BlazorSnake/Pages/Index.razor
+++ b/BlazorSnake/Pages/Index.razor
@@ -20,7 +20,9 @@
     <h5>Use <b>keybord arrows</b> or <b>swipe</b> to move. </h5>
     <h5>Press <b>A</b> to speed up and <b>Z</b> to slow down.</h5>
     <h5>Collect all the apples in a level to move to the next level. If you do it fast enough you will get a time bonus.</h5>
+    <h6>If you are interested in the source code you can find it <a href="https://github.com/henthoven/BlazorGame" target="_blank">here</a>.</h6>
 </div>
+
 
 
 @code
